[package]
name = "dev_wow_auth_server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
simple_logger = "4.0.0"
wow_login_messages = { git = "https://github.com/gtker/wow_messages.git", rev = "443174ebf0438921f766488b1c1e2bce42c6cabf", features = ["sync"] }
#wow_login_messages = { path = "../wow_messages/wow_login_messages", features = ["sync"] }
wow_srp = { version = "0.7.0", default-features = false, features = ["srp-default-math"] }

[features]
